--- a/markov-writer/pyproject.toml
+++ b/markov-writer/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["ssilvidi <steve.silvidi@rackspace.com>"]
 python = "^3.8"
 markovify = "^0.9.3"
 python-slugify = "^5.0.2"
+GitPython = "^3.1.24"
 
 [tool.poetry.dev-dependencies]
 
