--- a/runway-stuff/runway.yml
+++ b/runway-stuff/runway.yml
@@ -9,6 +9,11 @@ deployments:
           terraform_backend_config:
             bucket: ${cfn ${var namespace}-tf-state.TerraformStateBucketName}
             dynamodb_table: ${cfn ${var namespace}-tf-state.TerraformStateTableName}
+      - path: blogbot-cf.tf
+        options:
+          terraform_backend_config:
+            bucket: ${cfn ${var namespace}-tf-state.TerraformStateBucketName}
+            dynamodb_table: ${cfn ${var namespace}-tf-state.TerraformStateTableName}
     regions:
       - us-east-2
     parameters:
