--- a/runway-stuff/blogbot-lambda.sls/serverless.yml
+++ b/runway-stuff/blogbot-lambda.sls/serverless.yml
@@ -30,6 +30,9 @@ functions:
     environment:
       BUCKET_NAME: !Ref blogBucket
       MY_REGION: ${aws:region}
+      TITLE_CORPUS: "clickbait.txt"
+      BODY_CORPUS: "clickbait.txt"
+
   publisher:
     handler: publisher.publisher
     timeout: 30
@@ -40,17 +43,17 @@ functions:
     environment:
       BUCKET_NAME: !Ref blogBucket
       MY_REGION: ${aws:region}
+      KEY_PARAMETER_NAME: "git-lambda"
       GIT_SSH_COMMAND: 'ssh -o StrictHostKeyChecking=no -i /tmp/id_rsa'
+      GIT_REPO_URL: 'git@github.com:ss1lvi/nesting-blog.git'
+      GIT_USER_NAME: "ss1lvi"
+      GIT_USER_EMAIL: "steve@silvidi.com"
+      BLOG_PATH: "/content/blog/"
 
 resources:
   Resources:
     blogBucket:
       Type: AWS::S3::Bucket
-      # Properties:
-      #   BucketName: !Join
-      #     - "-"
-      #     - - "blogbot-bucket"
-      #       - !Ref AWS::Region
   Outputs:
     BlogBucket:
       Description: The blog bucket name
